[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-solutions-daniel-mizuki"
version = "0.1.4"
authors = [
  { name="Daniel Mizuki", email="dmizuki12@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Repository = "https://github.com/daniel-mizuki/leetcode-solutions"
Issues = "https://github.com/daniel-mizuki/leetcode-solutions/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]